# explainer

./: .gitignore  LICENSE  README.md  pyproject.toml
build_in_public/: Day_1.md  Day_3.md  Day_4.md  Day_5.md  objective.md
instructions/: CRAWLER_USAGE.md
nb/: browser.py  browser_exp.ipynb  coding_agent_exp.ipynb
notebooks/: browser_exp.ipynb  coding_agent_exp.ipynb  scraping.ipynb  synthetic_question_gen.ipynb
src/: constants.py  init.ipynb  seeder.py  site_crawler.py
