[project]
name = "explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.5",
    "openai>=2.8.0",
    "playwright>=1.56.0",
    "strands-agents[anthropic]>=1.16.0",
    "strands-agents-tools>=0.2.15",
    "python-dotenv>=1.2.1",
    "chromadb>=1.3.7",
]
