[project]
name = "explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.5",
    "openai>=2.8.0",
    "playwright>=1.56.0",
    "strands-agents[anthropic]>=1.16.0",
    "python-dotenv==1.0.1",
    "chromadb>=1.3.7",
    "langchain-anthropic>=1.3.0",
    "langgraph>=1.0.5",
    "lxml==5.3.0",
    "pytest-playwright>=0.7.2",
    "langchain>=1.2.0",
    "browser-use>=0.11.2",
    "langchain-community>=0.4.1",
    "pytz>=2025.2",
    "strands-agents-tools>=0.2.15",
    "markdownify>=1.2.0",
    "black>=25.12.0",
    "crawl4ai>=0.7.8",
    "newspaper4k>=0.9.4",
]
